补齐表单组件

--- a/quick_weixin/onekit/ui/label/label.wxml
+++ b/quick_weixin/onekit/ui/label/label.wxml
@@ -1,2 +1,8 @@
-<!--onekit/ui/label/label.wxml-->
-<text>onekit/ui/label/label.wxml</text>
+<label
+class="onekit-label {{Class}}"
+style="{{Style}}"
+id="{{Id}}"
+for="{{for}}"
+>
+<slot></slot>
+</label>
