--- a/quick_weixin/onekit/ui/textarea/textarea.wxml
+++ b/quick_weixin/onekit/ui/textarea/textarea.wxml
@@ -1,21 +1,17 @@
-<input
+<textarea
 class="onekit-input {{Class}}"
 style="{{Style}}"
 id="{{Id}}"
+name="{{name}}"
 value="{{value}}"
-type="{{type}}"
-password="{{password}}"
 placeholder="{{placeholder}}"
 placeholder-style="{{placeholderStyle}}"
 placeholder-class="{{placeholderClass}}"
 disabled="{{disabled}}"
 maxlength="{{maxlength}}"
 focus="{{focus}}"
-confirm-type="{{confirmType}}"
-confirm-hold="{{confirmHold}}"
-cursor="{{cursor}}"
-selection-start="{{selectionStart}}"
-selection-end="{{selectionEnd}}"
-name="{{name}}"
-bindinput="onChange"
-></input>
+auto-height="{{autoHeight}}"
+
+show-count="{{showCount}}"
+controlled="{{controlled}}"
+></textarea>
