--- a/quick_weixin/onekit/onekit.wxss
+++ b/quick_weixin/onekit/onekit.wxss
@@ -1,24 +1,20 @@
 page {
     width: 100%;
     height: 100%;
-    background-color:rgb(251, 249, 254) ;
+    background-color: #fff;
     font-size: 4vw;
     font-family: sans-serif,PingFang SC;
-    color: rgba(0,0,0,.545);
 }
 .onekit-div,.onekit-list,.onekit-list-item,.onekit-popup,.onekit-refresh,.onekit-richtext,.onekit-stack,.onekit-swiper,.onekit-tabs,onekit-tab-bar,.onekit-tab-content,.onekit-a,.onekit-image,.onekit-rating,.onekit-span,.onekit-text,.onekit-marquee,.onekit-input,.onekit-lable,.onekit-option,.onekit-picker,.onekit-select,.onekit-textarea,.onekit-video,.onekit-camera,.onekit-canvas,.onekit-web,.onekit-map,.onekit-custommarker {
     margin: 0;
     padding: 0;
     border-width: 0;
     text-size-adjust: none;
-    border-style: solid;
 }
 
-page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,page>.onekit-refresh,page>.onekit-richtext,page>.onekit-stack,page>.onekit-swiper,page>.onekit-tabs,page>onekit-tab-bar,page>.onekit-tab-content,page>.onekit-a,page>.onekit-image,page>.onekit-rating,page>.onekit-span,page>.onekit-text,.onekit-marquee,page>.onekit-input,page>.onekit-lable,page>.onekit-option,page>.onekit-picker,page>.onekit-select,page>.onekit-textarea,page>.onekit-video,page>.onekit-camera,page>.onekit-canvas,page>.onekit-web,page>.onekit-map,page>.onekit-custommarker{ /* page>div */
+page>.onekit-div{ /* page>div */
     margin: 0 auto;
     pointer-events: auto;
-    min-height: 100%;
-
 }
 /************** div *****************/
 .onekit-div {
@@ -34,7 +30,9 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     pointer-events: none;
     overflow: hidden;
 }
-
+page>.onekit-div {
+    min-height: 100%;
+}
 /*list*/
 .onekit-list {
     box-sizing: border-box;
@@ -53,7 +51,9 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     flex: 0 999999 auto;
     pointer-events: auto;
 }
-
+.onekit-list{
+    min-height: 100%;
+}
 /*.onekit-list-item**/
 .onekit-list-item{
     box-sizing: border-box;
@@ -68,7 +68,7 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     max-width: 100vw;
 }
 .onekit-list-item{
-    
+    min-height: 100%;
 }
 /******/
 .onekit-popup{
@@ -90,7 +90,7 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     z-index: 999;
 }
 .onekit-popup {
-    
+    min-height: 100%;
 }
 /******/
 .onekit-refresh {
@@ -106,7 +106,7 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     pointer-events: auto;
 }
 .onekit-refresh {
-    
+    min-height: 100%;
 }
 /* .onekit-richtext */
 .onekit-richtext{
@@ -116,12 +116,12 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     padding-bottom: 20rpx;
 }
 .onekit-richtext{
-    
+    min-height: 100%;
 }
 /* .onekit-stack */
 .onekit-stack {
     width: 0rpx;
-    
+    min-height: 100%;
 }
 /*.onekit-swiper  */
 .onekit-swiper {
@@ -131,7 +131,7 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
 .onekit-swiper {
     position: relative;
     overflow: hidden;
-    
+    min-height: 100%;
 }
 /* .onekit-tabs */
 .onekit-tabs {
@@ -155,7 +155,7 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     max-height: 100%;
 }
 .onekit-tabs {
-    
+    min-height: 100%;
 }
 /* onekit-tab-bar */
 onekit-tab-bar {
@@ -166,7 +166,7 @@ onekit-tab-bar {
     align-items: center;
 }
 onekit-tab-bar {
-    
+    min-height: 100%;
 }
 /* .onekit-tab-content */
 .onekit-tab-content {
@@ -177,7 +177,7 @@ onekit-tab-bar {
     display: block;
 }
 .onekit-tab-content {
-    height: calc(100% - 13.2rpx);
+    height: calc(100% - 13.2px);
 }
 /*  .onekit-a*/
 .onekit-a {
@@ -199,7 +199,7 @@ onekit-tab-bar {
 .onekit-a {
     color: grey;
     text-decoration: none;
-    
+    min-height: 100%;
 }
 /* .onekit-image */
 .onekit-image {
@@ -218,7 +218,7 @@ onekit-tab-bar {
     width: auto;
     height: auto;
     overflow: hidden;
-    
+    min-height: 100%;
 }
 /*  .onekit-rating*/
 .onekit-rating {
@@ -249,20 +249,17 @@ onekit-tab-bar {
     overflow: hidden;
 }
 .onekit-rating {
-    
+    min-height: 100%;
 }
 /*.onekit-span  */
 .onekit-span {
-    
+    min-height: 100%;
 }
 /* .onekit-text */
 .onekit-text {
-    display: flex;
+    display: -webkit-box;
     -webkit-box-orient: vertical;
-   /* -webkit-box-pack: center;*/
- 
-   justify-content: center;
-   align-items: center;
+    -webkit-box-pack: center;
     word-break: break-word;
     box-sizing: border-box;
     line-height: normal;
@@ -272,7 +269,7 @@ onekit-tab-bar {
     white-space: pre-line;
 }
 .onekit-text {
-    
+    min-height: 100%;
 }
 /* .onekit-marquee */
 .onekit-marquee {
@@ -286,11 +283,11 @@ onekit-tab-bar {
     white-space: nowrap;
 }
 .onekit-marquee {
-    
+    min-height: 100%;
 }
 /*.onekit-input  */
 .onekit-input {
-    /* -webkit-writing-mode: horizontal-tb !important; */
+    writing-mode: horizontal-tb !important;
     text-rendering: auto;
     color: -internal-light-dark-color(black, white);
     letter-spacing: normal;
@@ -333,7 +330,7 @@ onekit-tab-bar {
     background-color: inherit;
     outline: none;
     font-size: 3.47vw;
-    
+    min-height: 100%;
 }
 /*.onekit-label  */
 .onekit-label {
@@ -353,7 +350,7 @@ onekit-tab-bar {
 }
 .onekit-label {
     font-size: 4.27vw;
-    
+    min-height: 100%;
 }
 /*.onekit-option*/
 .onekit-option {
@@ -365,7 +362,7 @@ onekit-tab-bar {
 }
 .onekit-option {
     pointer-events: auto;
-    
+    min-height: 100%;
 }
 /* .onekit-picker */
 .onekit-picker {
@@ -390,11 +387,11 @@ onekit-tab-bar {
 .onekit-picker {
     font-size: 4.27vw;
     align-self: center;
-    
+    min-height: 100%;
 }
 /* .onekit-select */
 .onekit-select {
-    /* -webkit-writing-mode: horizontal-tb !important; */
+    writing-mode: horizontal-tb !important;
     text-rendering: auto;
     color: -internal-light-dark-color(black, white);
     letter-spacing: normal;
@@ -423,11 +420,11 @@ onekit-tab-bar {
     overflow: visible !important;
 }
 .onekit-select {
-    
+    min-height: 100%;
 }
 /* .onekit-textarea */
 .onekit-textarea {
-    /* -webkit-writing-mode: horizontal-tb !important; */
+    writing-mode: horizontal-tb !important;
     text-rendering: auto;
     color: -internal-light-dark-color(black, white);
     letter-spacing: normal;
@@ -475,7 +472,7 @@ onekit-tab-bar {
 .onekit-textarea {
     font-size: 4.27vw;
     background-color: inherit;
-    
+    min-height: 100%;
 }
 /* .onekit-video */
 .onekit-video {
@@ -505,7 +502,7 @@ onekit-tab-bar {
     height: 100%;
 }
 .onekit-video {
-    
+    min-height: 100%;
 }
 /*camera  */
 .onekit-camera {
@@ -522,11 +519,11 @@ onekit-tab-bar {
     overflow: hidden;
 }
 .onekit-camera {
-    
+    min-height: 100%;
 }
 /* .onekit-canvas */
 .onekit-canvas {
-    
+    min-height: 100%;
 }
 /* .onekit-web*/
 .onekit-web {
@@ -535,7 +532,7 @@ onekit-tab-bar {
 .onekit-web {
     width: -webkit-fill-available;
     height: -webkit-fill-available;
-    
+    min-height: 100%;
 }
 /* .onekit-map */
 .onekit-map {
@@ -543,7 +540,7 @@ onekit-tab-bar {
 }
 .onekit-map {
     pointer-events: auto;
-    
+    min-height: 100%;
 }
 /* .onekit-custommarker */
 .onekit-custommarker {
@@ -560,7 +557,7 @@ onekit-tab-bar {
     overflow: hidden;
 }
 .onekit-custommarker {
-    
+    min-height: 100%;
 }
 /* .onekit-progress */
 .onekit-progress   {
@@ -581,7 +578,7 @@ onekit-tab-bar {
 }
 .onekit-progress {
     width: 100%;
-    
+    min-height: 100%;
 }
 .onekit-progressr {
     position: relative;
