Check the properties；Close the shell

--- a/quick_weixin/onekit/ui/slider/slider.wxml
+++ b/quick_weixin/onekit/ui/slider/slider.wxml
@@ -5,17 +5,10 @@ id="{{Id}}"
 min="{{min}}"
 max="{{max}}"
 step="{{step}}"
-disabled="{{disabled}}"
+block-color="{{blockColor}}"
 value="{{value}}"
-name="{{name}}"
-show-value="{{showValue}}"
-activeColor="{{activeColor}}"
-backgroundColor="{{backgroundColor}}"
-block-size="{{handleSize}}"
-block-color="{{handleColor}}"
-bindchange="slider_change"
-bindchanging="slider_changing"
-track-size="{{trackSize}}"
+
+
 >
 <slot></slot>
 </slider>
