--- a/quick_weixin/onekit/onekit.wxss
+++ b/quick_weixin/onekit/onekit.wxss
@@ -17,7 +17,7 @@ page {
 page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,page>.onekit-refresh,page>.onekit-richtext,page>.onekit-stack,page>.onekit-swiper,page>.onekit-tabs,page>onekit-tab-bar,page>.onekit-tab-content,page>.onekit-a,page>.onekit-image,page>.onekit-rating,page>.onekit-span,page>.onekit-text,.onekit-marquee,page>.onekit-input,page>.onekit-lable,page>.onekit-option,page>.onekit-picker,page>.onekit-select,page>.onekit-textarea,page>.onekit-video,page>.onekit-camera,page>.onekit-canvas,page>.onekit-web,page>.onekit-map,page>.onekit-custommarker{ /* page>div */
     margin: 0 auto;
     pointer-events: auto;
-    min-height: 100%;
+    height: 100%;
 
 }
 /************** div *****************/
@@ -67,9 +67,6 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     height: fit-content;
     max-width: 100vw;
 }
-.onekit-list-item{
-    
-}
 /******/
 .onekit-popup{
     box-sizing: border-box;
@@ -89,9 +86,6 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     display: none;
     z-index: 999;
 }
-.onekit-popup {
-    
-}
 /******/
 .onekit-refresh {
     box-sizing: border-box;
@@ -105,18 +99,12 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     max-width: 100%;
     pointer-events: auto;
 }
-.onekit-refresh {
-    
-}
 /* .onekit-richtext */
 .onekit-richtext{
     pointer-events: auto;
     width: -webkit-fill-available;
     text-size-adjust: 200%;
     padding-bottom: 20rpx;
-}
-.onekit-richtext{
-    
 }
 /* .onekit-stack */
 .onekit-stack {
@@ -154,19 +142,18 @@ page>.onekit-div,page>.onekit-list,page>.onekit-list-item,page>.onekit-popup,pag
     pointer-events: auto;
     max-height: 100%;
 }
-.onekit-tabs {
-    
-}
 /* onekit-tab-bar */
-onekit-tab-bar {
-    position: absolute;
-    z-index: 1;
-    left: 0;
-    width: 100%;
+.onekit-tab-bar {
+    border-top: 1.004px solid rgb(187, 187, 187);
+    border-right-color: rgb(187, 187, 187);
+    border-bottom-color: rgb(187, 187, 187);
+    border-left-color: rgb(187, 187, 187);
+    background-color: rgb(255, 255, 255);
+    display: flex;
     align-items: center;
 }
-onekit-tab-bar {
-    
+.onekit-tab-bar>view,.onekit-tab-bar>text{
+    flex-grow:1;
 }
 /* .onekit-tab-content */
 .onekit-tab-content {
@@ -177,7 +164,7 @@ onekit-tab-bar {
     display: block;
 }
 .onekit-tab-content {
-    height: calc(100% - 13.2rpx);
+    height: calc(100% - 13.2px);
 }
 /*  .onekit-a*/
 .onekit-a {
@@ -248,20 +235,14 @@ onekit-tab-bar {
     justify-content: space-around;
     overflow: hidden;
 }
-.onekit-rating {
-    
-}
 /*.onekit-span  */
-.onekit-span {
-    
-}
 /* .onekit-text */
 .onekit-text {
-    display: flex;
+
     -webkit-box-orient: vertical;
    /* -webkit-box-pack: center;*/
  
-   justify-content: center;
+
    align-items: center;
     word-break: break-word;
     box-sizing: border-box;
@@ -270,9 +251,6 @@ onekit-tab-bar {
     text-align: left;
     width: fit-content;
     white-space: pre-line;
-}
-.onekit-text {
-    
 }
 /* .onekit-marquee */
 .onekit-marquee {
@@ -284,9 +262,6 @@ onekit-tab-bar {
     overflow: hidden;
     text-align: initial;
     white-space: nowrap;
-}
-.onekit-marquee {
-    
 }
 /*.onekit-input  */
 .onekit-input {
@@ -422,9 +397,6 @@ onekit-tab-bar {
 .onekit-select:not(:-internal-list-box) {
     overflow: visible !important;
 }
-.onekit-select {
-    
-}
 /* .onekit-textarea */
 .onekit-textarea {
     /* -webkit-writing-mode: horizontal-tb !important; */
@@ -504,9 +476,6 @@ onekit-tab-bar {
     background-color: #000;
     height: 100%;
 }
-.onekit-video {
-    
-}
 /*camera  */
 .onekit-camera {
     box-sizing: border-box;
@@ -521,13 +490,7 @@ onekit-tab-bar {
     pointer-events: none;
     overflow: hidden;
 }
-.onekit-camera {
-    
-}
 /* .onekit-canvas */
-.onekit-canvas {
-    
-}
 /* .onekit-web*/
 .onekit-web {
     flex: 1;
@@ -558,9 +521,6 @@ onekit-tab-bar {
 .onekit-custommarker {
     pointer-events: none;
     overflow: hidden;
-}
-.onekit-custommarker {
-    
 }
 /* .onekit-progress */
 .onekit-progress   {
