--- a/quick_weixin/onekit/ui/tab-content/tab-content.wxml
+++ b/quick_weixin/onekit/ui/tab-content/tab-content.wxml
@@ -1,3 +1,7 @@
-<view class="onekit-tab-content {{Class}}" style="{{Style}}">
-<slot/>
+<view class="onekit-tab-content {{Class}}" style="{{Style}};">
+  <swiper style="height:100%;">
+    <swiper-item wx:for="{{count}}" wx:key="item" style="height:100%;overflow:scroll;">
+      <slot name="onekit-tab-{{index}}"/>
+    </swiper-item>
+  </swiper>
 </view>
