--- a/quick_weixin/test/test.wxss
+++ b/quick_weixin/test/test.wxss
@@ -4,8 +4,8 @@
   flex-direction: column;
 }
 .footer-container {
-  height: 120px;
-  border-top-width: 1px;
+  height: 120rpx;
+  border-top-width: 1rpx;
   border-color: #bbbbbb;
   background-color: #ffffff;
 }
@@ -18,27 +18,26 @@
   flex: 1;
 }
 .introduce {
-  padding-left: 80px;
-  padding-right: 80px;
-  margin-bottom: 80px;
-  margin-top: 60px;
+  padding-left: 80rpx;
+  padding-right: 80rpx;
+  margin-bottom: 80rpx;
+  margin-top: 60rpx;
 }
 .introduce-detail {
   text-align: center;
   flex: 1;
-  lines: 3;
-  line-height: 50px;
+  line-height: 50rpx;
   color: #888888;
 }
 .item-container {
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 30rpx;
+  margin-right: 30rpx;
   background-color: #ffffff;
   flex-direction: column;
-  margin-bottom: 30px;
+  margin-bottom: 30rpx;
 }
 .item-title-detail {
-  padding: 40px;
+  padding: 40rpx;
   flex: 1;
   color: #000000;
 }
@@ -47,26 +46,26 @@
 }
 .item-content {
   flex-direction: column;
-  padding: 30px;
+  padding: 30rpx;
   display: none;
 }
 .item-li {
   border-color: #bbbbbb;
-  border-bottom-width: 1px;
+  border-bottom-width: 1rpx;
   align-items: center;
 }
 .item-li:active {
   background-color: #dfdfdf;
 }
 .item_arrow_img {
-  height: 40px;
-  width: 20px;
-  margin-right: 30px;
+  height: 40rpx;
+  width: 20rpx;
+  margin-right: 30rpx;
   object-fit: contain;
 }
 .item-li-detail {
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 25rpx;
+  padding-bottom: 25rpx;
   color: #000000;
   flex: 1;
 }
