--- a/quick_weixin/onekit/onekit.wxss
+++ b/quick_weixin/onekit/onekit.wxss
@@ -5,7 +5,7 @@ page {
     font-size: 4vw;
     font-family: sans-serif,PingFang SC;
 }
-.onekit-div,.onekit-list,.onekit-list-item,.onekit-popup,.onekit-refresh,.onekit-richtext,.onekit-stack,.onekit-swiper,.onekit-tabs,onekit-tab-bar,.onekit-tab-content,.onekit-a,.onekit-image,.onekit-rating,.onekit-span,.onekit-text,.onekit-marquee,.onekit-input,.onekit-lable,.onekit-option,.onekit-picker,.onekit-select,.onekit-textarea,.onekit-video,.onekit-camera,.onekit-canvas,.onekit-web,.onekit-map,.onekit-custommarker {
+.onekit-div,.onekit-list,.onekit-list-item,.onekit-popup,.onekit-refresh,.onekit-richtext,.onekit-stack,.onekit-swiper,.onekit-tabs,.onekit-tab-bar,.onekit-tab-content,.onekit-a,.onekit-image,.onekit-rating,.onekit-span,.onekit-text,.onekit-marquee,.onekit-input,.onekit-lable,.onekit-option,.onekit-picker,.onekit-select,.onekit-textarea,.onekit-video,.onekit-camera,.onekit-canvas,.onekit-web,.onekit-map,.onekit-custommarker {
     margin: 0;
     padding: 0;
     border-width: 0;
@@ -15,6 +15,7 @@ page {
 page>.onekit-div{ /* page>div */
     margin: 0 auto;
     pointer-events: auto;
+    height: 100%;
 }
 /************** div *****************/
 .onekit-div {
@@ -31,7 +32,7 @@ page>.onekit-div{ /* page>div */
     overflow: hidden;
 }
 page>.onekit-div {
-    min-height: 100%;
+    
 }
 /*list*/
 .onekit-list {
@@ -52,7 +53,7 @@ page>.onekit-div {
     pointer-events: auto;
 }
 .onekit-list{
-    min-height: 100%;
+    
 }
 /*.onekit-list-item**/
 .onekit-list-item{
@@ -68,7 +69,7 @@ page>.onekit-div {
     max-width: 100vw;
 }
 .onekit-list-item{
-    min-height: 100%;
+    
 }
 /******/
 .onekit-popup{
@@ -90,7 +91,7 @@ page>.onekit-div {
     z-index: 999;
 }
 .onekit-popup {
-    min-height: 100%;
+    
 }
 /******/
 .onekit-refresh {
@@ -106,7 +107,7 @@ page>.onekit-div {
     pointer-events: auto;
 }
 .onekit-refresh {
-    min-height: 100%;
+    
 }
 /* .onekit-richtext */
 .onekit-richtext{
@@ -116,12 +117,12 @@ page>.onekit-div {
     padding-bottom: 20rpx;
 }
 .onekit-richtext{
-    min-height: 100%;
+    
 }
 /* .onekit-stack */
 .onekit-stack {
     width: 0rpx;
-    min-height: 100%;
+    
 }
 /*.onekit-swiper  */
 .onekit-swiper {
@@ -131,7 +132,7 @@ page>.onekit-div {
 .onekit-swiper {
     position: relative;
     overflow: hidden;
-    min-height: 100%;
+    
 }
 /* .onekit-tabs */
 .onekit-tabs {
@@ -154,19 +155,11 @@ page>.onekit-div {
     pointer-events: auto;
     max-height: 100%;
 }
-.onekit-tabs {
-    min-height: 100%;
-}
-/* onekit-tab-bar */
-onekit-tab-bar {
-    position: absolute;
-    z-index: 1;
-    left: 0;
+/* .onekit-tab-bar */
+.onekit-tab-bar {
+   display: flex;
     width: 100%;
     align-items: center;
-}
-onekit-tab-bar {
-    min-height: 100%;
 }
 /* .onekit-tab-content */
 .onekit-tab-content {
@@ -199,7 +192,7 @@ onekit-tab-bar {
 .onekit-a {
     color: grey;
     text-decoration: none;
-    min-height: 100%;
+    
 }
 /* .onekit-image */
 .onekit-image {
@@ -218,7 +211,7 @@ onekit-tab-bar {
     width: auto;
     height: auto;
     overflow: hidden;
-    min-height: 100%;
+    
 }
 /*  .onekit-rating*/
 .onekit-rating {
@@ -249,11 +242,11 @@ onekit-tab-bar {
     overflow: hidden;
 }
 .onekit-rating {
-    min-height: 100%;
+    
 }
 /*.onekit-span  */
 .onekit-span {
-    min-height: 100%;
+    
 }
 /* .onekit-text */
 .onekit-text {
@@ -269,7 +262,7 @@ onekit-tab-bar {
     white-space: pre-line;
 }
 .onekit-text {
-    min-height: 100%;
+    
 }
 /* .onekit-marquee */
 .onekit-marquee {
@@ -283,7 +276,7 @@ onekit-tab-bar {
     white-space: nowrap;
 }
 .onekit-marquee {
-    min-height: 100%;
+    
 }
 /*.onekit-input  */
 .onekit-input {
@@ -330,7 +323,7 @@ onekit-tab-bar {
     background-color: inherit;
     outline: none;
     font-size: 3.47vw;
-    min-height: 100%;
+    
 }
 /*.onekit-label  */
 .onekit-label {
@@ -350,7 +343,7 @@ onekit-tab-bar {
 }
 .onekit-label {
     font-size: 4.27vw;
-    min-height: 100%;
+    
 }
 /*.onekit-option*/
 .onekit-option {
@@ -362,7 +355,7 @@ onekit-tab-bar {
 }
 .onekit-option {
     pointer-events: auto;
-    min-height: 100%;
+    
 }
 /* .onekit-picker */
 .onekit-picker {
@@ -387,7 +380,7 @@ onekit-tab-bar {
 .onekit-picker {
     font-size: 4.27vw;
     align-self: center;
-    min-height: 100%;
+    
 }
 /* .onekit-select */
 .onekit-select {
@@ -420,7 +413,7 @@ onekit-tab-bar {
     overflow: visible !important;
 }
 .onekit-select {
-    min-height: 100%;
+    
 }
 /* .onekit-textarea */
 .onekit-textarea {
@@ -472,7 +465,7 @@ onekit-tab-bar {
 .onekit-textarea {
     font-size: 4.27vw;
     background-color: inherit;
-    min-height: 100%;
+    
 }
 /* .onekit-video */
 .onekit-video {
@@ -502,7 +495,7 @@ onekit-tab-bar {
     height: 100%;
 }
 .onekit-video {
-    min-height: 100%;
+    
 }
 /*camera  */
 .onekit-camera {
@@ -519,11 +512,11 @@ onekit-tab-bar {
     overflow: hidden;
 }
 .onekit-camera {
-    min-height: 100%;
+    
 }
 /* .onekit-canvas */
 .onekit-canvas {
-    min-height: 100%;
+    
 }
 /* .onekit-web*/
 .onekit-web {
@@ -532,7 +525,7 @@ onekit-tab-bar {
 .onekit-web {
     width: -webkit-fill-available;
     height: -webkit-fill-available;
-    min-height: 100%;
+    
 }
 /* .onekit-map */
 .onekit-map {
@@ -540,7 +533,7 @@ onekit-tab-bar {
 }
 .onekit-map {
     pointer-events: auto;
-    min-height: 100%;
+    
 }
 /* .onekit-custommarker */
 .onekit-custommarker {
@@ -557,7 +550,7 @@ onekit-tab-bar {
     overflow: hidden;
 }
 .onekit-custommarker {
-    min-height: 100%;
+    
 }
 /* .onekit-progress */
 .onekit-progress   {
@@ -578,7 +571,7 @@ onekit-tab-bar {
 }
 .onekit-progress {
     width: 100%;
-    min-height: 100%;
+    
 }
 .onekit-progressr {
     position: relative;
