--- a/quick_weixin/onekit/ui/textarea/textarea.wxml
+++ b/quick_weixin/onekit/ui/textarea/textarea.wxml
@@ -1,9 +1,9 @@
 <textarea
-class="onekit-input {{Class}}"
+class="onekit-textarea {{Class}}"
 style="{{Style}}"
 id="{{Id}}"
 placeholder="{{placeholder}}"
 maxlength="{{maxlength}}"
 
 
-></textarea>
+><slot/></textarea>
