--- a/quick_weixin/onekit/onekit.wxss
+++ b/quick_weixin/onekit/onekit.wxss
@@ -315,7 +315,7 @@ page>.onekit-div {
     margin: 0;
     padding: 0;
     min-width: 0;
-    width: auto;
+    /* width: auto; */
     white-space: normal;
     pointer-events: auto;
 }
@@ -458,14 +458,14 @@ page>.onekit-div {
     box-sizing: border-box;
     -webkit-flex-shrink: 0;
     flex-shrink: 0;
-    width: auto;
+   /* width: auto;*/
     white-space: normal;
     pointer-events: auto;
 }
 .onekit-textarea {
     font-size: 4.27vw;
     background-color: inherit;
-    
+  
 }
 /* .onekit-video */
 .onekit-video {
