--- a/quick_weixin/pages/picker/picker.wxml
+++ b/quick_weixin/pages/picker/picker.wxml
@@ -1,21 +1,32 @@
-<view  class="page">
-  <view  class="page-description">选择器</view>
-  <view  class="page-section">
-    <onekit-picker  bindChange="bindPickerChange" value="{{index}}" range="{{array}}">
-      <view  class="row">
-        <view  class="row-title">地区选择器</view>
-        <view  class="row-extra">当前选择：{{array[index]}}</view>
+<onekit-div Class="doc-page">
+    <onekit-div Class="page-title-wrap">
+      <onekit-text Class="page-title">{{componentName}}</onekit-text>
+    </onekit-div>
 
-      </view>
-    </onekit-picker>
-  </view>
+    <onekit-div Class="item-container">
+      <onekit-text Class="item-title">地区选择器</onekit-text>
+      <onekit-div Class="item-content">
+        <onekit-text Class="label">当前选择</onekit-text>
+        <onekit-picker Class="picker" type="text" range="{{list}}" value="{{country}}" bindchange="getCountry" Id="picker">请选择地区</onekit-picker>
+    
+      </onekit-div>
+    </onekit-div>
 
-  <view  class="page-section">
-    <onekit-picker  bindChange="bindObjPickerChange" value="{{arrIndex}}" range="{{objectArray}}" range-key="name">
-      <view  class="row">
-        <view  class="row-title">ObjectArray</view>
-        <view  class="row-extra">当前选择：{{objectArray[arrIndex].name}}</view>
-      </view>
-    </onekit-picker>
-  </view>
-</view>
+    <onekit-div Class="item-container">
+      <onekit-text Class="item-title">时间选择器</onekit-text>
+      <onekit-div Class="item-content">
+        <onekit-text Class="label">当前选择</onekit-text>
+        <onekit-picker Class="picker" type="time" value="{{time}}" bindchange="getTime">请选择时间</onekit-picker>
+      </onekit-div>
+    </onekit-div>
+
+    <onekit-div Class="item-container">
+      <onekit-text Class="item-title">日期选择器</onekit-text>
+      <onekit-div Class="item-content">
+        <onekit-text Class="label">当前选择</onekit-text>
+        <onekit-picker Class="picker" type="date" value="{{date}}" bindchange="getDate">请选择日期</onekit-picker>
+      </onekit-div>
+    </onekit-div>
+
+    <onekit-input type="button" Class="btn" Style="margin-top: 50px;" value="通过代码调取地区选择器" onclick="show"/>
+  </onekit-div>
