--- a/quick_weixin/onekit/onekit.wxss
+++ b/quick_weixin/onekit/onekit.wxss
@@ -11,7 +11,9 @@ page {
     border-width: 0;
     text-size-adjust: none;
 }
-
+.onekit-tab-bar>.onekit-active{
+    color:#0faeff!important;
+}
 page>.onekit-div{ /* page>div */
     margin: 0 auto;
     pointer-events: auto;
@@ -160,6 +162,14 @@ page>.onekit-div {
    display: flex;
     width: 100%;
     align-items: center;
+    height: 120px;
+    flex-shrink: 0;
+    border-top: 1px solid rgb(187, 187, 187);
+    border-right-color: rgb(187, 187, 187);
+    border-bottom-color: rgb(187, 187, 187);
+    border-left-color: rgb(187, 187, 187);
+    background-color: rgb(255, 255, 255);
+    bottom: 0px;
 }
 /* .onekit-tab-content */
 .onekit-tab-content {
