--- a/quick_weixin/onekit/ui/tab-bar/tab-bar.wxml
+++ b/quick_weixin/onekit/ui/tab-bar/tab-bar.wxml
@@ -1,5 +1,3 @@
-<view class="onekit-tab-bar {{Class}}" style="{{Style}}">
-<view style="flex-grow:1;">
+<view class="onekit-tab-bar {{Class}}" style="{{Style}};{{mode!='scrollable'?'overflow-x:scroll;':'display:flex;'}}">
 <slot/>
-</view>
 </view>
