--- a/quick_weixin/onekit/ui/tabs/tabs.wxml
+++ b/quick_weixin/onekit/ui/tabs/tabs.wxml
@@ -1,3 +1,3 @@
-<view class="onekit-tabs {{Class}}" style="{{Style}};height:100%;">
+<view class="onekit-tabs {{Class}}" style="{{Style}}">
 <slot/>
 </view>
