更改样式属性

--- a/quick_weixin/onekit/ui/a/a.wxml
+++ b/quick_weixin/onekit/ui/a/a.wxml
@@ -1,7 +1,7 @@
 <view
-class="onekit-a {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-a {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{onekitId}}"
 href="{{href}}"
 bindtap="a_bindtap"
 >
