--- a/quick_weixin/onekit/ui/popup/popup.wxml
+++ b/quick_weixin/onekit/ui/popup/popup.wxml
@@ -1,7 +1,7 @@
 <view
-class="onekit-popup {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-popup {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{onekitId}}"
 target="{{target}}"
 >
 <slot/>
