--- a/quick_weixin/onekit/ui/tab-content/tab-content.wxml
+++ b/quick_weixin/onekit/ui/tab-content/tab-content.wxml
@@ -1,4 +1,4 @@
-<view class="onekit-tab-content {{Class}}" style="{{Style}};">
+<view class="onekit-tab-content {{onekitClass}}" style="{{onekitStyle}};">
   <swiper style="height:100%;">
     <swiper-item wx:for="{{count}}" wx:key="item" style="{{scrollable?'overflow:scroll;':''}}">
       <slot name="onekit-tab-{{index}}"/>
