--- a/quick_weixin/onekit/ui/input/input.wxml
+++ b/quick_weixin/onekit/ui/input/input.wxml
@@ -1,7 +1,7 @@
 <input
-class="onekit-input {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-input {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{onekitId}}"
 type="{{type}}"
 name="{{name}}"
 value="{{value}}"
