--- a/quick_weixin/onekit/ui/list-item/list-item.wxml
+++ b/quick_weixin/onekit/ui/list-item/list-item.wxml
@@ -1,4 +1,4 @@
 <!--components/recycle-item/recycle-item.wxml-->
-<view class="onekit-list-item {{Class}}" style="{{Style}}" id="{{Id}}">
+<view class="onekit-list-item {{onekitClass}}" style="{{onekitStyle}}" id="{{onekitId}}">
   <slot></slot>
 </view>
