--- a/quick_weixin/onekit/ui/progress/progress.wxml
+++ b/quick_weixin/onekit/ui/progress/progress.wxml
@@ -1,7 +1,7 @@
 <progress
-class="onekit-progress {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-progress {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{onekitId}}"
 percent="{{percent}}"
 type="{{type}}"
 >
