--- a/quick_weixin/onekit/ui/rich-text/rich-text.wxml
+++ b/quick_weixin/onekit/ui/rich-text/rich-text.wxml
@@ -1,7 +1,7 @@
 <rich-text
-class="onekit-rich-text {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-rich-text {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{onekitId}}"
 nodes="{{nodes}}"
 >
 <slot>
