--- a/quick_weixin/onekit/ui/slider/slider.wxml
+++ b/quick_weixin/onekit/ui/slider/slider.wxml
@@ -1,7 +1,7 @@
 <slider
-class="onekit-slider {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-slider {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{onekitId}}"
 min="{{min}}"
 max="{{max}}"
 step="{{step}}"
