--- a/quick_weixin/onekit/ui/stack/stack.wxml
+++ b/quick_weixin/onekit/ui/stack/stack.wxml
@@ -1,7 +1,7 @@
 <scroll-view
-class="onekit-stack {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-stack {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{onekitId}}"
 >
 <slot/>
 </scroll-view>
