--- a/quick_weixin/onekit/ui/swiper/swiper.wxml
+++ b/quick_weixin/onekit/ui/swiper/swiper.wxml
@@ -1,7 +1,7 @@
 <swiper
-class="onekit-swiper {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-swiper {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{onekitId}}"
 current="{{index}}"
 autoplay="{{autoplay}}"
 interval="{{interval}}"
