--- a/quick_weixin/onekit/ui/text/text.wxml
+++ b/quick_weixin/onekit/ui/text/text.wxml
@@ -1,7 +1,7 @@
 <text
-class="onekit-text {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-text {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{onekitId}}"
 bindtap="text_tap"
 >
 <slot></slot>
