--- a/quick_weixin/onekit/ui/video/video.wxml
+++ b/quick_weixin/onekit/ui/video/video.wxml
@@ -1,7 +1,7 @@
 <video 
-class="onekit-video {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-video {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{onekitId}}"
 src="{{src}}"
 autoplay="{{autoplay}}"
 poster="{{poster}}"
