--- a/miniprogram_dev/zhang/zhang.wxml
+++ b/miniprogram_dev/zhang/zhang.wxml
@@ -1,8 +1,8 @@
 <button bindtap="getAccessToken_tap">getAccessToken</button>
-<button bindtap="tt_login_tap">tt.login</button>
+<button bindtap="quick_login_tap">tt.login</button>
 <button bindtap="code2Session1_tap">code2Session(code)</button>
 <button bindtap="code2Session2_tap">code2Session(anonymousCode)</button>
-<button bindtap="tt_getUserInfo_tap">tt.getUserInfo</button>
+<button bindtap="quick_getUserInfo_tap">tt.getUserInfo</button>
 <button bindgetphonenumber ="button_getphonenumber" open-type="getPhoneNumber">open-type=getPhoneNumber</button>
 <button bindtap="setUserStorage_tap">setUserStorage</button>
 <button bindtap="removeUserStorage_tap">removeUserStorage</button>
